--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-sudo: false
 language: scala
+jdk:
+  - openjdk8
 scala:
   - 2.11.12
   - 2.12.8
   - 2.13.0
-jdk:
-  - oraclejdk8
 script:
   - sbt +test +docs/tut scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
 cache:
