Update scalajs and don't duplicate cross version building in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ scala:
 jdk:
   - oraclejdk8
 script:
-  - sbt +test +docs/tut scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
+  - sbt test docs/tut scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
 cache:
   directories:
   - $HOME/.sbt
