Single Scala version in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,9 @@ language: scala
 jdk:
   - openjdk8
 scala:
-  - 2.11.12
-  - 2.12.8
   - 2.13.0
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION test docs/tut scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
+  - sbt +test docs/tut scalafmtCheck test:scalafmtCheck scalafmtSbtCheck
 cache:
   directories:
   - $HOME/.sbt
