--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,9 @@ jobs:
       - uses: olafurpg/setup-scala@v2
       - uses: olafurpg/setup-gpg@v2
       - name: Publish
-        run: sbt ci-release
+        run: sbt +test ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          CI_SNAPSHOT_RELEASE: test-and-publish
-          CI_RELEASE: test-and-publish-signed
