Try using a GitHub token I've created manually
Might still need to kick off a pages build as a final step.

See this thread for details: https://github.community/t5/GitHub-Actions/Github-action-not-triggering-gh-pages-upon-push/td-p/26869/highlight/true/page/3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       run: gem install jekyll -v 4
     - name: Publish the microsite
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.MICROSITE_GITHUB_TOKEN }}
       run: sbt -J-Xms4G -J-Xmx4G docs/publishMicrosite
 
   test:
