--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,9 @@ name: Release
 on:
   push:
     branches:
-      - master
+      - series/2.x
     tags:
-      - "*"
+      - "v2.*"
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -20,18 +20,4 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
 
-  publish_site:
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: olafurpg/setup-scala@v10
-    - uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.6
-    - name: Install Jekyll
-      run: gem install jekyll -v 4
-    - name: Publish the microsite
-      env:
-        GITHUB_TOKEN: ${{ secrets.MICROSITE_GITHUB_TOKEN }}
-      run: sbt -J-Xms4G -J-Xmx4G docs/publishMicrosite
+# Note: we don't update the microsite for 2.x releases
