feat: add all the rewrites with the ends

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,3 +3,12 @@ runner.dialect = scala3
 
 align.preset = more
 maxColumn = 110
+
+rewrite {
+  scala3 {
+    convertToNewSyntax = true
+    removeOptionalBraces = true
+    insertEndMarkerMinLines = 30
+    removeEndMarkerMaxLines = 29
+  }
+}
