--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,14 @@
 version = 3.6.1
-runner.dialect = scala213
+runner.dialect = scala3
 
 align.preset = more
-maxColumn = 80
+maxColumn = 110
+
+rewrite {
+  scala3 {
+    convertToNewSyntax = true
+    removeOptionalBraces = true
+    insertEndMarkerMinLines = 30
+    removeEndMarkerMaxLines = 29
+  }
+}
