--- a/modules/docs/src/main/resources/microsite/data/menu.yml
+++ b/modules/docs/src/main/resources/microsite/data/menu.yml
@@ -1,11 +1,13 @@
 options:
   - title: Getting started
-    url: docs/index.html
+    url: docs/
   - title: Combinators
-    url: docs/combinators.html
+    url: docs/combinators
   - title: MTL Combinators
-    url: docs/mtl-combinators.html
+    url: docs/mtl-combinators
   - title: Retry policies
-    url: docs/policies.html
-  - title: Sleep
-    url: docs/sleep.html
+    url: docs/policies
+  - title: Adaptation
+    url: docs/adaptation
+  - title: v3 -> v4 Migration
+    url: docs/migration
