Fix the installation of Jekyll in CI (#553)
* Upgrade Ruby and Jekyll
* Make the whole microsite on CI builds, instead of just running `mdoc`
* Add a `.ruby-version` file

Jekyll now outputs a load of deprecation warnings, but I have built the
site locally and checked that it renders correctly.

I've made an issue (#554) for migrating from sbt-microsites to Laika,
which is actively maintained and doesn't rely on Jekyll.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,11 @@ jobs:
           java-version: '17'
           cache: 'sbt'
       - uses: sbt/setup-sbt@v1
+      - uses: ruby/setup-ruby@v1
+      - name: Install Jekyll
+        run: gem install jekyll -v 4.3.4
       - name: Compile documentation
-        run: sbt -J-Xms4G -J-Xmx4G docs/mdoc
+        run: sbt -J-Xms4G -J-Xmx4G docs/makeMicrosite
   format:
     runs-on: ubuntu-latest
     steps:
