--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: olafurpg/setup-scala@v10
+    - uses: sbt/setup-sbt@v1
+    - uses: actions/setup-java@v4
+      with:
+        java-version: 11
+        distribution: adopt
     - name: Test
       run: sbt -J-Xms4G -J-Xmx4G +test
   bincompat:
@@ -23,7 +27,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: olafurpg/setup-scala@v10
+    - uses: sbt/setup-sbt@v1
+    - uses: actions/setup-java@v4
+      with:
+        java-version: 11
+        distribution: adopt
     - name: Compile documentation
       run: sbt -J-Xms4G -J-Xmx4G docs/mdoc
   format:
