--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,9 @@ name: Release
 on:
   push:
     branches:
-      - main
+      - series/3.x
     tags:
-      - "*"
+      - "v3.*"
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -23,22 +23,4 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
 
-  publish_site:
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'sbt'
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6
-      - name: Install Jekyll
-        run: gem install jekyll -v 4
-      - name: Publish the microsite
-        run: sbt -J-Xms4G -J-Xmx4G docs/publishMicrosite
-        env:
-          GITHUB_TOKEN: ${{ secrets.MICROSITE_GITHUB_TOKEN }}
+# Note: we don't update the microsite for 2.x releases
