--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: 'sbt'
+      - uses: sbt/setup-sbt@v1
       - name: Publish
         run: sbt +test ci-release
         env:
